Create cart directive and add small improvements.
Move cart logic from catalog controller to cart directive (which has isEmpty method).
Add small improvements in styles and unit tests.
Fix link to e-mail.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,6 +24,15 @@ body {
   padding-bottom: 19px;
 }
 
+/* Custom table vertical align */
+.devices > tbody > tr > td {
+  vertical-align: middle;
+}
+
+.cart {
+  background-color: #eee;
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
