--- a/src/views/about.html
+++ b/src/views/about.html
@@ -46,7 +46,7 @@
   </p>
 
   <p>
-    <a class="btn btn-primary btn-lg" href="mailto:someone@yoursite.com" role="button">Apply!</a>
+    <a class="btn btn-primary btn-lg" href="mailto:recruitment-cracow@ubnt.com" role="button">Apply!</a>
   </p>
 
   <p>
