Update developer About page.

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -2,42 +2,35 @@
   <h1>Hello Engineer,</h1>
 
   <p>
-    This project is a part of the recruitment process for QA position in Kraków office of Ubiquiti Networks Polska.
+    This project is a part of the recruitment process for JavaScript Developer position in
+    Kraków office of Ubiquiti Networks Polska (<a href="http://ubnt.com">http://ubnt.com</a>).
   </p>
 
   <p>
-    We are looking for a QA developer to write automated tests in Karma and Protractor, for the Ubiquiti Networks
-    (<a href="http://ubnt.com">http://ubnt.com</a>) office in Krakow.
+    We have a modular SPA (<a href="https://aircrm.ubnt.com/">https://aircrm.ubnt.com/</a>) written in Angular.js,
+    with Backbone models, and a RESTful API provided by Django, Erlang and Clojure services running on AWS.
+    We are using WebSockets, canvas, Grunt, Karma and Protractor. We have a company CSS components library
+    based on Bootstrap and maintained in cooperation with great graphic designers.
   </p>
 
   <p>
-    We have a SPA (<a href="https://aircrm.ubnt.com/">https://aircrm.ubnt.com/</a>) written in Angular.js, with Backbone
-    models and a RESTful API provided by Django, Erlang and Clojure services running on AWS.
+    Our workflow includes Github, JIRA, Jenkins, Codeship. We support only the latest versions of Chrome, Firefox, and IE.
   </p>
 
   <p>
-    Our workflow includes Github, JIRA, Jenkins and Codeship. We are supporting only the newest Chrome, Firefox, Safari,
-    and (sic!) IE.
-  </p>
-
-  <p>
-    The front-end team has 5 members in Krakow and 2 analysts in the US.
-
+    The front-end team has 5 members in Krakow and 2 analysts in the US. Our work is organized using Kanban.
   <p/>
 
   <p>
-    We are looking for a person experienced in testing JavaScript - Angular is not a requirement but a nice-to-have -
-    with a possibility of transitioning to a developer position.
+    We are looking for a person experienced in writing modern JavaScript using ES6 (Angular is not a requirement but a nice-to-have), CSS3, and HTML5.
   </p>
 
   <p>
-    This is - preferably - a full-time position, but part-time is acceptable. The salary ranges from 5000 to 10000 PLN
-    monthly (gross, full-time), depending upon experience. Remote work of up to ~40% time is acceptable.
+    The salary ranges from 8000 to 14000 PLN monthly for regular developer and from 14000 to 20000 PLN for senior developer (gross, full-time). Remote work of up to ~40% time is acceptable.
   </p>
 
   <p>
-    We work on MacBooks Pro, with 2 x 24’’ monitors and Webstorm, but other configurations are acceptable too. We offer
-    private health care, excellent coffee, free snacks, and fun people to work with.
+    We work on MacBooks Pro, with 2 x 24’’ monitors and WebStorm, but other configurations are acceptable too. We offer private health care, excellent coffee, free snacks, and fun people to work with.
   </p>
 
   <p>
