Update QA About page.

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -11,18 +11,18 @@
   </p>
 
   <p>
-    We have a SPA (<a href="https://aircrm.ubnt.com/">https://aircrm.ubnt.com/</a>) written in Angular.js, with Backbone
-    models and a RESTful API provided by Django, Erlang and Clojure services running on AWS.
+    We have a modular SPA (<a href="https://aircrm.ubnt.com/">https://aircrm.ubnt.com/</a>) written in Angular.js,
+    with Backbone models, and a RESTful API provided by Django, Erlang and Clojure services running on AWS.
+    We are using WebSockets, canvas, Grunt, Karma and Protractor. We have a company CSS components library
+    based on Bootstrap and maintained in cooperation with great graphic designers.
   </p>
 
   <p>
-    Our workflow includes Github, JIRA, Jenkins and Codeship. We are supporting only the newest Chrome, Firefox, Safari,
-    and (sic!) IE.
+    Our workflow includes Github, JIRA, Jenkins, Codeship. We support only the latest versions of Chrome, Firefox, and IE.
   </p>
 
   <p>
-    The front-end team has 5 members in Krakow and 2 analysts in the US.
-
+    The front-end team has 5 members in Krakow and 2 analysts in the US. Our work is organized using Kanban.
   <p/>
 
   <p>
